<resources>
    <string name="app_name">coin</string>

    <string-array name="main_button_arr">
        <item>首页</item>
        <item>投注</item>
        <item>c2c</item>
        <item>应用</item>
        <item>钱包</item>
    </string-array>

    <string name="login">登录</string>
    <string name="verify_phone_num">请输入手机号码</string>
    <string name="register_hint_pwd">输入登录密码</string>
    <string name="register_hint_safepwd">输入安全密码</string>
    <string name="invitation_code">邀请码（必填）</string>
    <string name="edit_verify_code">输入验证码</string>
    <string name="nocount">还没有账号？</string>
    <string name="hascount">已有账号？</string>
    <string name="clickregiest">注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="registeraty_phone_error">请输入正确的手机号码</string>
    <string name="new_pwd_length">密码不能小于8位</string>
    <string name="pay_pwd_length">密码不能小于6位</string>
    <string name="forget_edit_pwd">请输入登录密码</string>
    <string name="edit_invatecode">请输入邀请码</string>
    <string name="edit_verfycode">请输入验证码</string>
    <string name="edit_pay_pwd">请输入支付密码</string>
    <string name="net_error">网络异常，请检查后重试</string>
    <string name="loginagain">登录失效，请重新登录</string>
    <string name="request_failed">请求失败</string>
    <string name="sys_setting">系统设置</string>
    <string name="invite_friends">邀请好友</string>
    <string name="my_team">我的团队</string>
    <string name="kefu">客服</string>
    <string name="getverfycode">获取验证码</string>
    <string name="youxiqiandao">游戏签到</string>
    <string name="sended">已经发送</string>
    <string name="re_send_code">再次获取验证码</string>
    <string name="no_open">暂未开放</string>
    <string name="failed">失败</string>
    <string name="save_pictures">保存图片</string>
    <string name="wait_picture_besave">图片正在保存中，请稍等...</string>

    <string name="pictures_saved_successfully">图片保存成功！</string>
    <string name="pictures_saved_failed">图片保存失败！</string>
</resources>
