<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lin_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dpDimen20"
        android:paddingTop="@dimen/dpDimen60"
        android:paddingBottom="@dimen/dpDimen60"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/ll_userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_user_icon"
                android:layout_width="@dimen/dpDimen50"
                android:layout_height="@dimen/dpDimen50"
                android:src="@mipmap/icon_touxiang" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_phone_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13800138000"
                    android:textColor="#ffffffff"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dpDimen5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dpDimen30"
                        android:layout_height="@dimen/dpDimen22"
                        android:src="@mipmap/icon_huiyuan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dpDimen5"
                        android:text="V2"
                        android:textColor="#ffffffff"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lin_header"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dpDimen20"
        android:paddingTop="@dimen/dpDimen10"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/rl_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="@dimen/dpDimen20"
                android:layout_height="@dimen/dpDimen20"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_shezhi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen60"
                android:layout_marginLeft="@dimen/dpDimen13"
                android:layout_toRightOf="@+id/iv_setting"
                android:drawablePadding="@dimen/dpDimen9"
                android:gravity="center_vertical"
                android:text="@string/sys_setting"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen06" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_fenxiang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_fenxiang"
                android:layout_width="@dimen/dpDimen20"
                android:layout_height="@dimen/dpDimen20"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_fenxiang" />

            <TextView
                android:id="@+id/tv_pay_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen60"
                android:layout_marginLeft="@dimen/dpDimen13"
                android:layout_toRightOf="@+id/iv_fenxiang"
                android:drawablePadding="@dimen/dpDimen9"
                android:gravity="center_vertical"
                android:text="@string/invite_friends"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen06" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_team"
                android:layout_width="@dimen/dpDimen20"
                android:layout_height="@dimen/dpDimen20"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_team" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen60"
                android:layout_marginLeft="@dimen/dpDimen13"
                android:layout_toRightOf="@+id/iv_team"
                android:drawablePadding="@dimen/dpDimen9"
                android:gravity="center_vertical"
                android:text="@string/my_team"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen06" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_kefu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_kefu"
                android:layout_width="@dimen/dpDimen20"
                android:layout_height="@dimen/dpDimen20"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_team" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen60"
                android:layout_marginLeft="@dimen/dpDimen13"
                android:layout_toRightOf="@+id/iv_kefu"
                android:drawablePadding="@dimen/dpDimen9"
                android:gravity="center_vertical"
                android:text="@string/kefu"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen06" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>