<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/allbackground"
        android:transitionName="login">


        <RelativeLayout
            android:id="@+id/close"
            android:layout_width="@dimen/dpDimen45"
            android:layout_height="@dimen/dpDimen45"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/dpDimen35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/dpDimen16"
                android:layout_height="@dimen/dpDimen16"
                android:layout_centerInParent="true"
                android:src="@mipmap/normal_back" />

        </RelativeLayout>


        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/dpDimen45"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:drawablePadding="@dimen/dpDimen18"
            android:gravity="center_vertical"
            android:hint="@string/register_hint_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/wordhintcolor"
            android:textSize="@dimen/spDimen14"
            app:layout_constraintEnd_toEndOf="@+id/acount"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/acount"
            app:layout_constraintTop_toBottomOf="@+id/acount"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpDimen02"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/login_bg_line"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:id="@+id/acount"
            android:layout_width="0dp"
            android:layout_height="@dimen/dpDimen45"
            android:layout_marginStart="32dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="32dp"
            android:background="@null"
            android:drawablePadding="@dimen/dpDimen18"
            android:gravity="center_vertical"
            android:hint="@string/verify_phone_num"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="@color/wordhintcolor"
            android:textSize="@dimen/spDimen14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpDimen02"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/login_bg_line"
            app:layout_constraintEnd_toEndOf="@+id/acount"
            app:layout_constraintStart_toStartOf="@+id/acount"
            app:layout_constraintTop_toBottomOf="@+id/acount" />


        <EditText
            android:id="@+id/et_safe_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/dpDimen45"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:drawablePadding="@dimen/dpDimen18"
            android:gravity="center_vertical"
            android:hint="@string/register_hint_safepwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/wordhintcolor"
            android:textSize="@dimen/spDimen14"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpDimen02"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/login_bg_line"
            app:layout_constraintEnd_toEndOf="@+id/et_safe_password"
            app:layout_constraintStart_toStartOf="@+id/et_safe_password"
            app:layout_constraintTop_toBottomOf="@+id/et_safe_password" />


        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_height="@dimen/dpDimen45"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:drawablePadding="@dimen/dpDimen18"
            android:gravity="center_vertical"
            android:hint="@string/edit_verify_code"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/wordhintcolor"
            android:textSize="@dimen/spDimen14"
            app:layout_constraintEnd_toEndOf="@+id/et_safe_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_safe_password"
            app:layout_constraintTop_toBottomOf="@+id/et_safe_password"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpDimen02"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/login_bg_line"
            app:layout_constraintEnd_toEndOf="@+id/et_verify_code"
            app:layout_constraintStart_toStartOf="@+id/et_verify_code"
            app:layout_constraintTop_toBottomOf="@+id/et_verify_code" />


        <TextView
            android:id="@+id/login"
            android:layout_width="@dimen/dpDimen180"
            android:layout_height="@dimen/dpDimen40"
            android:layout_marginStart="60dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="60dp"
            android:background="@mipmap/reset_btn"
            android:gravity="center"
            android:text=""
            android:textColor="@color/bg_color"
            android:textSize="@dimen/spDimen19"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_verify_code" />



        <TextView
            android:id="@+id/tv_error_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text=""
            android:textColor="#ffff3d3d"
            android:textSize="@dimen/spDimen13"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dpDimen120"
            android:layout_height="@dimen/dpDimen30"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/reset_pwd_word" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/dpDimen16"
            android:layout_height="@dimen/dpDimen16"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/acount"
            app:srcCompat="@mipmap/icon_clear_word" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/dpDimen16"
            android:layout_height="@dimen/dpDimen16"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password"
            app:srcCompat="@mipmap/visiable_word" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/dpDimen16"
            android:layout_height="@dimen/dpDimen16"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="@+id/et_safe_password"
            app:layout_constraintTop_toTopOf="@+id/et_safe_password"
            app:srcCompat="@mipmap/novisiable_word" />


        <TextView
            android:id="@+id/tv_get_verfy_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getverfycode"
            android:textColor="@color/word1"
            android:gravity="center"
            android:padding="@dimen/dpDimen5"
            android:background="@drawable/bg_get_verfycode"
            app:layout_constraintBottom_toTopOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="@+id/et_verify_code"
            app:layout_constraintTop_toTopOf="@+id/et_verify_code" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>